# python-durable

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: approval.py  examples.py  in_memory_example.py  pydantic_ai_example.py  redis_example.py  taskiq_example.py
src/durable/: __init__.py  backoff.py  context.py  pydantic_ai.py  redis_store.py  store.py  workflow.py
tests/: test_durable.py  test_pydantic_ai.py  test_redis_store.py  test_signals.py
