[project]
name = "python-durable"
version = "0.2.2"
description = "Lightweight workflow durability for Python — make any async workflow resumable after crashes with just a decorator."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Willem" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.20",
]

[project.urls]
Repository = "https://github.com/WillemDeGroef/python-durable"

[project.optional-dependencies]
redis = [
    "redis>=5.0",
]
pydantic-ai = [
    "pydantic-ai>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "ty>=0.0.1a7",
    "fakeredis>=2.26",
    "redis>=5.0",
    "pydantic-ai>=0.1",
]
examples = [
    "pydantic>=2.0",
    "pydantic-ai>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/durable"]

[tool.ty.src]
exclude = ["examples/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
